# Focus-Go

./: .env.example  .gitignore  .impeccable.md  CONTRIBUTING.md  LICENSE  README.md  deploy.sh  findings.md  index.html  package-lock.json  package.json  progress.md  task_plan.md  vercel.json
.codex/environments/: environment-2.toml  environment.toml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-staging.yml  deploy.yml  oss-release-backup.yml  oss-restore-drill.yml  release-unsigned.yml  release.yml  verify.yml
.opencode/plans/: onboarding-system-plan.md
.tmp/figma-note-redesign/: README.md  index.html
apps/ai-screenshot-tool/: .env.example  README.md  index.html  package.json
apps/ai-screenshot-tool/src-tauri/: Cargo.toml  tauri.conf.json
apps/ai-screenshot-tool/src-tauri/src/: capture.rs  lib.rs  main.rs  output.rs  overlay.rs  shortcut.rs  windows.rs
apps/desktop/: electron-builder.json5  eslint.config.cjs  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/: .gitignore  CLAUDE.md  components.json  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
docs/: PROJECT_OVERVIEW.md  README.md  onboarding-assessment.md  oss-backup.md  项目全局管理清单.xlsx
docs/plans/: 2026-02-19-ai-screenshot-tool-integration.md  2026-03-09-task-note-tiptap-design.md
docs/sops/: route-layer-full-bleed-background.md
scripts/oss/: _shared.mjs  (+5 more)
src/: App.tsx  main.tsx  styles.css
(+488 files in other folders)
