[package]
name = "focus_go_ai_screenshot_tool"
version = "0.1.0"
description = "Focus&Go AI Screenshot Tool native runtime"
authors = ["Focus&Go"]
license = "MIT"
repository = "https://github.com/VelvetAbyss/Focus-Go"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "focus_go_ai_screenshot_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-clipboard-manager = "2.3.2"
xcap = "0.8.2"
image = "0.25.9"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
mouse_position = "0.1.4"
